gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/class2.d
version https://git-lfs.github.com/spec/v1
oid sha256:a08a37a214da8a0ec9b407c53c917e1239d38f14e7eda5897f7bdecc5ba497d0
size 209
